// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParameterSelector matches snapshot with empty selection 1`] = `
<div
  class="relative w-full"
  style="z-index: 99999;"
>
  <button
    class="w-full px-4 sm:px-6 py-3 border border-gray-200 dark:border-gray-600 rounded-xl bg-white dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 dark:focus:ring-blue-400 focus:border-blue-500 dark:focus:border-blue-400 text-left flex items-center justify-between shadow-lg dark:shadow-gray-900/50 hover:border-gray-300 dark:hover:border-gray-500 transition-all duration-200 font-medium text-sm sm:text-base min-h-[56px] backdrop-blur-sm"
    type="button"
  >
    <div
      class="flex flex-wrap gap-2 items-center min-h-[24px]"
    >
      <span
        class="text-gray-500"
      >
        Select up to 2 parameters...
      </span>
    </div>
    <span
      class="flex items-center justify-center ml-3"
    >
      <svg
        class="w-6 h-6 text-gray-400 transition-transform "
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ParameterSelector matches snapshot with one parameter selected 1`] = `
<div
  class="relative w-full"
  style="z-index: 99999;"
>
  <button
    class="w-full px-4 sm:px-6 py-3 border border-gray-200 dark:border-gray-600 rounded-xl bg-white dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 dark:focus:ring-blue-400 focus:border-blue-500 dark:focus:border-blue-400 text-left flex items-center justify-between shadow-lg dark:shadow-gray-900/50 hover:border-gray-300 dark:hover:border-gray-500 transition-all duration-200 font-medium text-sm sm:text-base min-h-[56px] backdrop-blur-sm"
    type="button"
  >
    <div
      class="flex flex-wrap gap-2 items-center min-h-[24px]"
    >
      <span
        class="inline-flex items-center px-3 py-1 rounded-full bg-blue-50 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 font-medium text-sm shadow-sm border border-blue-200 dark:border-blue-700"
      >
        Temperature
        <button
          class="ml-2 text-blue-400 hover:text-blue-700 focus:outline-none"
          tabindex="-1"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
    </div>
    <span
      class="flex items-center justify-center ml-3"
    >
      <svg
        class="w-6 h-6 text-gray-400 transition-transform "
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ParameterSelector matches snapshot with two parameters selected 1`] = `
<div
  class="relative w-full"
  style="z-index: 99999;"
>
  <button
    class="w-full px-4 sm:px-6 py-3 border border-gray-200 dark:border-gray-600 rounded-xl bg-white dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 dark:focus:ring-blue-400 focus:border-blue-500 dark:focus:border-blue-400 text-left flex items-center justify-between shadow-lg dark:shadow-gray-900/50 hover:border-gray-300 dark:hover:border-gray-500 transition-all duration-200 font-medium text-sm sm:text-base min-h-[56px] backdrop-blur-sm"
    type="button"
  >
    <div
      class="flex flex-wrap gap-2 items-center min-h-[24px]"
    >
      <span
        class="inline-flex items-center px-3 py-1 rounded-full bg-blue-50 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 font-medium text-sm shadow-sm border border-blue-200 dark:border-blue-700"
      >
        Temperature
        <button
          class="ml-2 text-blue-400 hover:text-blue-700 focus:outline-none"
          tabindex="-1"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
      <span
        class="inline-flex items-center px-3 py-1 rounded-full bg-blue-50 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 font-medium text-sm shadow-sm border border-blue-200 dark:border-blue-700"
      >
        Relative Humidity
        <button
          class="ml-2 text-blue-400 hover:text-blue-700 focus:outline-none"
          tabindex="-1"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
    </div>
    <span
      class="flex items-center justify-center ml-3"
    >
      <svg
        class="w-6 h-6 text-gray-400 transition-transform "
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;
